--- a/client/src/index.css
+++ b/client/src/index.css
@@ -74,6 +74,7 @@ a:hover {
   background-image: url('../src/assets/images/graphy.png');
   background-repeat: repeat;
   height: 100vh;
+  min-height: 850px;
 }
 
 #torder-home-container {
@@ -99,15 +100,54 @@ a:hover {
 }
 
 #torder-mytorders-container {
-  margin-top: 10em;
-  width: 800px;
+  /* margin-top: 5em; */
   background-color: #f4f4f4bb;
+  width: 1000px;
+  /* text-align: center; */
+  padding: 2em;
+  margin: 2em;
 }
 
-#torder-mytorders-table {
+#torder-mytorders-inner-container {
+  /* padding-right: 0;
+  padding-left: 0;
+  margin-right: auto;
+  margin-left: auto; */
+}
+
+#torder-mytorders-table-container {
   max-height: 500px;
   overflow: auto;
+  min-width: 600px;
+  padding: 1em;
 }
+
+/* #torder-mytorders-table {
+  table-layout: fixed;
+  min-width: 800px;
+  width: 100%;
+  height: 100%;
+}
+
+#torder-mytorders-table tbody {
+  display: block;
+  overflow: auto;
+  max-height: 450px;
+}
+
+#torder-mytorders-table thead tr {
+  display: block;
+}
+
+#torder-mytorders-table thead {
+}
+
+#torder-mytorders-table th,
+#torder-mytorders-table td {
+  padding: 5px;
+  text-align: left;
+  width: 400px;
+} */
 
 .torder-primary-btn {
   background-color: #343a40 !important;
@@ -168,4 +208,15 @@ a:hover {
 svg.svg-inline--fa.fa-question-circle.fa-w-16.torder-info-icon {
   padding: 4px;
   font-size: 20px;
+}
+
+.torder-panel {
+  margin: 10px;
+}
+#torder-input-file-col {
+  padding: 0;
+}
+
+#torder-sample-file-col {
+  text-align: right;
 }
